# AlphaLens-Multi_AI_Agent_Stock_Researcher

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
Backend/: api.py
Frontend/: app.py  components.py
Frontend/Chatbot/: chatbot_graph.py  chatbot_node.py  chatbot_prompt.py  run_chatbot.py
Tests/: Financial_Agent_Test.py  News_Sentiment_Agent_Test.py  Risk_Agent_Test.py  Technical_agent_test.py  Valuation_Agent_Test.py
Tests/Test_build_notebooks/: demo.ipynb  worker_fundamental.ipynb  worker_news_and_sentiment.ipynb  worker_risk_agent.ipynb  worker_technical_agent.ipynb  worker_valuation_agent.ipynb
src/AlphaLens/: __init__.py
src/AlphaLens/Orchestrator/: orchestrator.py  run_orchestrator.py
src/AlphaLens/SubAgent/FinancialAgent/: financial_agent_graph.py  financial_agent_nodes.py  financial_model.py  financial_prompts.py  financial_state.py  financial_tools.py  run_financial_agent.py
src/AlphaLens/SubAgent/news_sentiment_agent/: news_sentiment_agent_graph.py  news_sentiment_agent_nodes.py  news_sentiment_model.py  news_sentiment_prompt.py  news_sentiment_state.py  news_sentiment_tools.py  run_news_sentiment.py
src/AlphaLens/SubAgent/risk_agent/: risk_agent_graph.py  risk_agent_model.py  risk_agent_nodes.py  (+3 more)
src/AlphaLens/Synthesis/: synthesis_model.py  synthesis_prompt.py  synthesis_writing_node.py
src/AlphaLens/config/: llms.py  yf_proxy.py
src/AlphaLens/graph/: graph.py  state.py
src/AlphaLens/utils/: yf_utils.py
src/Query_Extraction/: query_extraction.py  query_extraction_model.py  ticker_selection.py
(+13 files in other folders)
